--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ sqlparse = "==0.4.2"
 pysastrawi = "==1.2.0"
 scikit-learn = "==1.0.2"
 gunicorn = ">=20.0,<21.0"
+dj-database-url = "==1.0.0"
+psycopg2 = "*"
 
 [dev-packages]
 
