--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ scikit-learn = "==1.0.2"
 gunicorn = ">=20.0,<21.0"
 dj-database-url = "==1.0.0"
 psycopg2 = "*"
+djangorestframework-simplejwt = "==5.2.0"
 
 [dev-packages]
 
