--- a/Pipfile
+++ b/Pipfile
@@ -16,10 +16,9 @@ pysastrawi = "==1.2.0"
 scikit-learn = "==1.0.2"
 gunicorn = ">=20.0,<21.0"
 dj-database-url = "==1.0.0"
-psycopg2 = "*"
-djangorestframework-simplejwt = "==5.2.0"
+psycopg2 = "==2.9.5"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9.13"
+python_version = "3.9"
